--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -1,4 +1,6 @@
 body{
     background-image: url('/resources/100_4914.jpg');
     background-size: 100% auto;
+
+    font-family: 'Ubuntu', sans-serif;
 }
