--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -7,11 +7,13 @@ body{
     background: -webkit-linear-gradient(45deg, #a9db80 0%,#96c56f 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(45deg, #a9db80 0%,#96c56f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a9db80', endColorstr='#96c56f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+    background-size: auto;
 }
 
 .jumbotron{
     background-image: url('/resources/jumb.jpg');
-    background-size: 100% auto;
+    background-size: 100%;
 
     -webkit-box-shadow: 0px 0px 10px -2px rgba(0,0,0,1);
     -moz-box-shadow: 0px 0px 10px -2px rgba(0,0,0,1);
